--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-json'
+//	implementation 'org.springframework:spring-web'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
