Fix sending JSON Body in POST request

--- a/src/main/resources/META-INF/native-image/com.example/rest-clients-native/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/com.example/rest-clients-native/reflect-config.json
@@ -60,5 +60,47 @@
 				"parameterTypes": []
 			}
 		]
+	},
+	{
+		"name": "com.example.clients.posts.PostRequest",
+		"allDeclaredConstructors": true,
+		"allDeclaredFields": true,
+		"methods": [
+			{
+				"name": "body",
+				"parameterTypes": []
+			},
+			{
+				"name": "userId",
+				"parameterTypes": []
+			},
+			{
+				"name": "title",
+				"parameterTypes": []
+			}
+		]
+	},
+	{
+		"name": "com.example.clients.posts.PostResponse",
+		"allDeclaredConstructors": true,
+		"allDeclaredFields": true,
+		"methods": [
+			{
+				"name": "title",
+				"parameterTypes": []
+			},
+			{
+				"name": "body",
+				"parameterTypes": []
+			},
+			{
+				"name": "userId",
+				"parameterTypes": []
+			},
+			{
+				"name": "id",
+				"parameterTypes": []
+			}
+		]
 	}
 ]
